--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        php: ['7.3', '7.4', '8.0']
+        php: ['5.4', '7.3', '7.4', '8.0']
 
     steps:
     - name: Checkout
